@@ -1,0 +1,13 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+datarootdir=@datarootdir@
+datadir=@datadir@
+vapidir=@datadir@/vala/vapi
+
+Name: Watray
+Description: General purpose IDE
+Version: @VERSION@
+Requires: glib-2.0 gobject-2.0 gtk+-2.0 gconf-2.0
+Cflags: -I${includedir}/watray-1.0
